imads-ffi/include/imads.h

/* Generated by cbindgen — do not edit */

#ifndef IMADS_H
#define IMADS_H

/* Warning: this file is auto-generated by cbindgen + manual patches. */

#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>

/**
 * Opaque engine configuration handle.
 */
typedef struct ImadsConfig ImadsConfig;

/**
 * Opaque engine handle.
 */
typedef struct ImadsEngine ImadsEngine;

/**
 * Engine statistics.
 */
typedef struct ImadsStats {
  uint64_t truth_evals;
  uint64_t truth_decision_cache_hits;
  uint64_t truth_eval_cache_hits;
  uint64_t partial_steps;
  uint64_t partial_decision_cache_hits;
  uint64_t partial_eval_cache_hits;
  uint64_t cheap_rejects;
  uint64_t invalid_eval_rejects;
} ImadsStats;

/**
 * Engine output returned from a run.
 *
 * - If `f_best_valid` is false, no feasible solution was found.
 * - `x_best_ptr` points to `x_best_len` elements owned by this struct. The caller must
 *   call `imads_output_free` to release the memory.
 */
typedef struct ImadsOutput {
  double f_best;
  bool f_best_valid;
  int64_t *x_best_ptr;
  uintptr_t x_best_len;
  struct ImadsStats stats;
} ImadsOutput;

/**
 * Environment descriptor.
 */
typedef struct ImadsEnv {
  uint64_t run_id;
  uint64_t config_hash;
  uint64_t data_snapshot_id;
  uint64_t rng_master_seed;
} ImadsEnv;

/**
 * Function-pointer vtable for custom evaluators.
 *
 * All function pointers must be non-null and safe to call from any thread.
 * `user_data` is passed through unchanged to every callback.
 */
typedef struct ImadsEvaluatorVTable {
  /**
   * Stage A cheap constraint gate. Return non-zero (true) to accept.
   */
  int32_t (*cheap_constraints)(const double *x, uintptr_t dim, uint8_t *user_data);
  /**
   * Monte Carlo sample. Write objective to `*f_out` and constraints to `c_out[0..m]`.
   */
  void (*mc_sample)(const double *x,
                    uintptr_t dim,
                    uint64_t tau,
                    uint32_t smc,
                    uint32_t k,
                    double *f_out,
                    double *c_out,
                    uintptr_t m,
                    uint8_t *user_data);
  /**
   * Number of constraints.
   */
  uintptr_t num_constraints;
  /**
   * Search space dimension. Set to 0 to let the engine infer from config/incumbent.
   */
  uintptr_t search_dim;
  /**
   * Opaque user data pointer.
   */
  uint8_t *user_data;
} ImadsEvaluatorVTable;

/**
 * Create an `EngineConfig` from a preset name.
 *
 * Valid names: `"legacy_baseline"`, `"balanced"`, `"conservative"`, `"throughput"`.
 * Returns null on invalid name.
 *
 * The caller must free the returned pointer with `imads_config_free`.
 */
ImadsConfig *imads_config_from_preset(const char *name);

/**
 * Free an `EngineConfig` created by `imads_config_from_preset`.
 */
void imads_config_free(ImadsConfig *cfg);

/**
 * Create a new engine instance.
 *
 * The caller must free the returned pointer with `imads_engine_free`.
 */
struct ImadsEngine *imads_engine_new(void);

/**
 * Free an engine instance.
 */
void imads_engine_free(struct ImadsEngine *engine);

/**
 * Run the engine with the built-in toy evaluator.
 *
 * The caller must call `imads_output_free` on the returned output to release `x_best_ptr`.
 */
struct ImadsOutput imads_engine_run(struct ImadsEngine *engine,
                                    const ImadsConfig *cfg,
                                    const struct ImadsEnv *env,
                                    uint32_t workers);

/**
 * Run the engine with a custom evaluator provided via function-pointer vtable.
 *
 * The caller must call `imads_output_free` on the returned output to release `x_best_ptr`.
 */
struct ImadsOutput imads_engine_run_with_evaluator(struct ImadsEngine *engine,
                                                   const ImadsConfig *cfg,
                                                   const struct ImadsEnv *env,
                                                   uint32_t workers,
                                                   struct ImadsEvaluatorVTable vtable);

/**
 * Run the engine with a custom evaluator provided via pointer to vtable.
 *
 * Equivalent to `imads_engine_run_with_evaluator` but takes a pointer to the
 * vtable struct instead of by value, for FFI systems that cannot pass structs
 * by value (e.g. Scala Native).
 */
struct ImadsOutput imads_engine_run_with_evaluator_ptr(struct ImadsEngine *engine,
                                                       const ImadsConfig *cfg,
                                                       const struct ImadsEnv *env,
                                                       uint32_t workers,
                                                       const struct ImadsEvaluatorVTable *vtable);

/**
 * Free the `x_best_ptr` allocation in an `ImadsOutput`.
 *
 * This must be called exactly once per output that has `x_best_ptr != null`.
 */
void imads_output_free(struct ImadsOutput *output);

#endif  /* IMADS_H */